# kairo-studio

./: .gitignore  AGENTS.md  DESIGN_SYSTEM.md  PROJECT_CONTEXT.md  README.md  TECH_CONTEXT.md  docker-compose.yml  skills-lock.json
backend/: main.py  pyproject.toml  requirements.txt  test_agents.py  test_api.py  test_planner.py
backend/alembic/: env.py
backend/alembic/versions/: 31daedca6f12_add_pdf_url_to_paper.py  5826c9522a3e_add_paper_chunks_and_vector.py  5f44bb485838_initial_schema.py  941ddda7f49a_add_conversations_table.py  afee60d63ac8_add_conversation_details.py
backend/app/agents/: base.py  embedding_agent.py  pdf_agent.py  planner_agent.py  reader_agent.py  search_agent.py
backend/app/api/: router.py
backend/app/api/endpoints/: graph.py  rag.py  research.py
backend/app/core/: celery_app.py  config.py  llm.py
backend/app/models/: __init__.py  chunk.py  conversation.py  graph.py  paper.py  project.py  user.py
backend/app/schemas/: agent.py
backend/app/worker/: tasks.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/.claude/: CLAUDE.md
frontend/.workspace/: db.json
frontend/.workspace/default/: main.typ
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/ai-assistant/: page.tsx
frontend/app/citation-manager/: page.tsx
frontend/app/literature-review/: page.tsx
frontend/app/project-workspace/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: AppLayout.tsx  KnowledgeGraph.tsx  Sidebar.tsx  TextType.tsx
frontend/components/ui/: ToolCallingLoader.tsx  (+1 more)
(+11 files in other folders)
