[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.139.2",
    "fastembed>=0.5.1",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "openai>=2.46.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.25.1",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
